--- a/TextWarp/appsettings.json
+++ b/TextWarp/appsettings.json
@@ -8,5 +8,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CfcreatorAccountLogin": "http://10.10.16.94:8000/account/login",
+  "AzureUploadAPIURL": "http://10.10.16.94:8000/api/file/upload"
 }
