fixed login issue.

--- a/TextWarp/appsettings.json
+++ b/TextWarp/appsettings.json
@@ -9,6 +9,6 @@
     }
   },
   "AllowedHosts": "*",
-  "CfcreatorAccountLogin": "http://10.10.16.94:8000/account/login",
+  "CfcreatorAccountLogin": "http://localhost:8000/account/login",
   "AzureUploadAPIURL": "http://10.10.16.94:8000/api/file/upload"
 }
