--- a/TextWarp/appsettings.json
+++ b/TextWarp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.10.16.94,3000;Database=cfcreator;persist security info=True;MultipleActiveResultSets=True;User ID=sa;Password=Sqlpassword37;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=cfcreator;persist security info=True;MultipleActiveResultSets=True;User ID=sa;Password=Sqlpassword37;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +10,5 @@
   },
   "AllowedHosts": "*",
   "CfcreatorAccountLogin": "http://localhost:8000/account/login",
-  "AzureUploadAPIURL": "http://10.10.16.94:8000/api/file/upload"
-}
+  "AzureUploadAPIURL": "http://localhost:8000/api/file/upload"
+  }
