--- a/TextWarp/TextWarp.csproj
+++ b/TextWarp/TextWarp.csproj
@@ -18,7 +18,9 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Models\" />
     <Folder Include="Pages\" />
+    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\bootstrap\dist\css\" />
