working on finalize

--- a/TextWarp/appsettings.json
+++ b/TextWarp/appsettings.json
@@ -10,5 +10,7 @@
   },
   "AllowedHosts": "*",
   "CfcreatorAccountLogin": "http://localhost:8000/account/login",
-  "AzureUploadAPIURL": "http://10.10.16.94:8000/api/file/upload"
+  "AzureUploadAPIURL": "http://10.10.16.94:8000/api/file/upload",
+  //"CfcreatorTshirtDesignURL": "http://52.191.10.230:8000/design/tshirt"
+  "CfcreatorTshirtDesignURL": "http://localhost:7178/design/tshirt"
 }
